# python_6502-emulator

./: .gitignore  pyproject.toml  scripts.py
data/: instruction_set.json
src/: app.py
src/cpu/: __init__.py  addressing_modes.py  bus.py  cpu.py  cpu_addressing_modes.py  cpu_bus.py  cpu_debugger.py  cpu_flags.py  cpu_instructions.py  cpu_state.py  cpu_state_handler.py  instructions.py  old_addressing_modes.py  state_handler.py
src/cpu/interfaces/: __init__.py  abstract_addressing_modes.py  abstract_bus.py  abstract_cpu.py  abstract_cpu_addressing_modes.py  abstract_cpu_bus.py  abstract_cpu_debugger.py  abstract_cpu_instructions.py  abstract_cpu_state_handler.py  abstract_debugger.py  abstract_instructions.py  abstract_state_handler.py
src/cpu/tests/: test_addressing_modes.py  test_state_handler.py
tests/cpu/: test_addressing_modes.py  test_cpu_addressing_modes.py  test_cpu_flags.py  test_cpu_state.py  test_cpu_state_handler.py  test_instructions.py  test_old_addressing_modes.py  test_old_cpu_flags.py
