[tool.poetry]
name = "python-6502"
version = "0.1.0"
description = "MOS 6502 Emulator"
authors = ["Smith"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_6502"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
